# VideoClassifier

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/: pytorch_android_torchvision_arm64-v8a.aar  video_classification.aar
app/release/: output-metadata.json
app/src/androidTest/java/com/example/videoclassifier/: ExampleInstrumentedTest.java
app/src/main/assets/: model.pt
app/src/test/java/com/example/videoclassifier/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
